# valkyrie

./: .gitignore  .jupyter_ystore.db  LICENSE  README.md  advice.md  cmd.py  def.py
codebase/: .gitignore  DYNAMICJAXPRTRACER_STATE_FIX.md  GRADIENT_CHECKPOINTING_FIX.md  MEMORY_MCP_SYMBOLS_REGISTRY.yaml  README.md  bigbird_benchmark_results.csv  bigbird_performance_report.txt  check_jax_config.py  check_tpu_status.py  configure_tpu_distributed.py  gradient_flow_fix_summary.md  numerical_stability_results.json  optimize_jax_tpu.py  production_validation.py  pyproject.toml  pytest.ini  requirements.txt  run_production_validation.sh  s5_holistic_stability_test.py  stage1_microtraining.py  stage2_hybrid_benchmark.py  test_bigbird_stability.py  test_comprehensive_integration.py  test_fixes_dry_run.py  test_focused_fixes.py  test_hf_token.py  test_hrm_training.py  test_hrm_training_distributed.py  test_hrm_training_memory_optimized.py  test_integration.py  test_lambda_stability_fix.py  test_loss_functions.py  test_real_training_pipeline.py  test_tracer_leak_fix.py  test_training_pipeline.py  verify_no_recompilation.py
codebase/checkpoints/: checkpoint_manifest.json
codebase/configs/: data_pipeline.yaml  tpuv4_32_mesh.yaml  valkyrie_base.yaml  valkyrie_tpu_v4_32.yaml  valkyrie_tpu_v4_8.yaml
codebase/docs/: TPU_V4_32_SETUP.md  design.md  feedback.md  testrec.md
codebase/examples/: tpu_v4_32_training.py
codebase/scripts/: test_hrm_rng.py
codebase/src/: __init__.py  configure_tpu_distributed.py  test_s5_expm_discretization.py
codebase/test_results/: s5_stability_tests_20251015_170118.jsonl  s5_stability_tests_20251015_170608.jsonl  s5_stability_tests_20251015_171040.jsonl  s5_stability_tests_20251015_171534.jsonl  (+23 more)
(+105 files in other folders)
